--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,17 +22,6 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
-  postgres_propostas:
-    image: 'postgres:9.6-alpine'
-    volumes:
-      - propostas-volume:/var/lib/postgresql/data
-    ports:
-      - 5433:5432
-    environment:
-      POSTGRES_USER: propostas
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: propostas
-
   postgres:
     image: 'postgres:9.6-alpine'
     volumes:
@@ -43,6 +32,19 @@ services:
       POSTGRES_USER: keycloak
       POSTGRES_PASSWORD: password
       POSTGRES_DB: keycloak
+      POSTGRES_HOST: postgres
+
+  postgres_proposta:
+    image: 'postgres:9.6-alpine'
+    volumes:
+      - propostas-volume:/var/lib/postgresql/data
+    ports:
+      - 22163:5432
+    environment:
+      URL_DATABASE: jdbc:postgresql://postgres-proposta:5432/proposta
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: propostas
       POSTGRES_HOST: postgres
 
   keycloak:
