--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#database
+spring.datasource.url=${URL_DATABASE:jdbc:postgresql://localhost:22163/propostas}
+spring.datasource.username=${POSTGRES_USER:admin}
+spring.datasource.password=${POSTGRES_PASSWORD:password}
 
+
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
