associar cartao proposta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Actuator
 management.endpoints.jmx.exposure.include=health
+
+#API externa
+periodicidade.executa-operacao=${NOME_DA_VARIAVEL_DE_AMBIENTE:300000}
