--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database
-spring.datasource.url=${URL_DATABASE:jdbc:postgresql://localhost:22163/propostas}
-spring.datasource.username=${POSTGRES_USER:admin}
-spring.datasource.password=${POSTGRES_PASSWORD:password}
+spring.datasource.url=${URL_DATABASE}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 
 #JPA
