--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#Actuator
-management.endpoints.jmx.exposure.include=health
+#Actuator e Prometheus
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.prometheus.enabled=true
+
 
 #API externa
 periodicidade.executa-operacao=${NOME_DA_VARIAVEL_DE_AMBIENTE:300000}
