--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,14 @@
 			<version>2.2.9.RELEASE</version>
 		</dependency>
 
-			<dependency>
+		<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-actuator</artifactId>
-			</dependency>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
