--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.11</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -85,6 +97,8 @@
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
+
+
 	</dependencyManagement>
 
 	<build>
